# WaveFlow

./: .coderabbit.yaml  .commitlintrc.cjs  .gitattributes  .gitignore  .gitlab-ci.yml  .pr_agent.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  clippy.toml  eslint.config.js  frontpage.html  index.html  package.json  release-please-config.json  rustfmt.toml  vite.config.ts
.codacy/: codacy.yaml
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/app/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/app/capabilities/: default.json
src-tauri/crates/app/src/: analysis.rs  backup.rs  discord_presence.rs  error.rs  lib.rs  main.rs  media_controls.rs  metadata_artwork.rs  offline.rs  paths.rs  queue.rs  scrobbler.rs  server_client.rs  smart_playlists.rs  spotify.rs  state.rs  sync_stub.rs  thumbnails.rs  watcher.rs
src-tauri/crates/app/src/audio/: analytics.rs  crossfade.rs  decoder.rs  engine.rs  events.rs  http_source.rs  mod.rs  output.rs  resampler.rs  spectrum.rs  state.rs  wasapi_exclusive.rs
src-tauri/crates/app/src/commands/: analysis.rs  app_info.rs  artist_overrides.rs  browse.rs  changelog.rs  deezer.rs  diagnostics.rs  dlna.rs  duplicates.rs  edit.rs  integration.rs  library.rs  loopback.rs  lyrics.rs  maintenance.rs  mod.rs  mood_radio.rs  motion_artwork.rs  offline.rs  player.rs  playlist.rs  plugin_store.rs  plugins.rs  preferences.rs  profile.rs  profile_io.rs  radio.rs  scan.rs  server_auth.rs  share.rs  similar.rs  smart_playlists.rs  spotify.rs  stats.rs  sync.rs  track.rs  updater.rs  web_radio.rs  web_radio_catalogue.rs  wrapped.rs
src-tauri/crates/app/src/db/: app_db.rs  migration_heal.rs  mod.rs  profile_db.rs  profile_meta.rs  rfc003_hlc_tests.rs
src-tauri/crates/app/src/dlna/: cds.rs  config.rs  http.rs  mod.rs
src-tauri/crates/app/src/smart_playlists/: cover.rs  on_repeat.rs
src-tauri/crates/app/src/sync/: apply.rs  canonical.rs  cursor.rs  device.rs  drain.rs  hlc.rs  hooks.rs  lamport.rs  mod.rs  mode.rs  payload.rs  queue.rs  track_emit.rs  track_snapshots.rs  ws.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: error.rs  lib.rs
src-tauri/crates/core/src/artwork/: metadata.rs  mod.rs  motion_cache.rs
src-tauri/crates/core/src/audio_format/: mod.rs
src-tauri/crates/core/src/domain/: library.rs  mod.rs  playlist.rs  profile.rs  track.rs
src-tauri/crates/core/src/metadata/: deezer.rs  lastfm.rs  lrclib.rs  mod.rs  name_match.rs  theaudiodb.rs
src-tauri/crates/core/tests/: plugin_release_radar.rs  plugin_web_radio.rs
src-tauri/crates/plugin-sdk/: Cargo.toml
src-tauri/crates/plugin-sdk/src/: lib.rs
src-tauri/crates/plugin-sdk/wit/: waveflow-host.wit
src-tauri/crates/spotify/: Cargo.toml
src-tauri/crates/spotify/src/: error.rs  lib.rs
src-tauri/crates/syncedlyrics/: Cargo.toml
src-tauri/crates/syncedlyrics/src/: http.rs  lib.rs  utils.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/app/: 20260411120000_initial.sql  20260413000000_metadata_caches.sql  20260427000000_rename_deezer_to_metadata.sql  20260509120000_lastfm_similar.sql  20260516120000_lyrics_ttml_format.sql  20260605000000_profile_canonical_id.sql  20260615000000_rfc003_hlc.sql  20260620120000_lyrics_provider.sql  20260623120000_metadata_artist_bio_source.sql  20260623130000_radio_lyrics.sql  20260624140000_radio_catalogue.sql
src-tauri/migrations/profile/: 20260411120000_initial.sql  20260413000100_drop_local_metadata_caches.sql  20260428000000_drop_metadata_fks.sql  20260428000001_track_rating.sql  20260428000002_track_audio_quality.sql  20260428000003_track_musical_key.sql  20260509000000_playlist_cover_hash.sql  20260509100000_playlist_cover_is_auto.sql  20260510221047_add_spotify_auth_provider.sql  20260512230000_perf_indexes.sql  20260514180000_album_artist.sql  20260514180001_invalidate_mtime_for_album_artist_backfill.sql  20260524191258_browse_covering_indexes.sql  20260601000000_waveflow_server_auth_provider.sql  20260602000000_sync_pending_op.sql  20260603000000_sync_canonical_id.sql  20260603000001_sync_library_canonical_id.sql  20260615000000_rfc003_hlc.sql  20260616000000_sync_pending_op_hlc.sql  20260628000000_artist_metadata_overrides.sql  20260719090000_play_event_survives_track_delete.sql  20260719140000_album_artwork_source.sql  20260719220000_album_motion_artwork.sql  20260721103000_genre_artwork.sql
src-tauri/plugins/release-radar/: Cargo.toml  manifest.toml
src-tauri/plugins/release-radar/src/: bindings.rs  lib.rs
src-tauri/plugins/release-radar/wit/: world.wit
src-tauri/plugins/web-radio/: Cargo.toml
src-tauri/plugins/web-radio/src/: bindings.rs  lib.rs
src-tauri/resources/plugins/release-radar/: plugin.wasm
src-tauri/resources/plugins/web-radio/: manifest.toml  plugin.wasm
src-tauri/src/: analysis.rs  backup.rs  deezer.rs  discord_presence.rs  error.rs  lastfm.rs  lib.rs  logging.rs  lrclib.rs  media_controls.rs  metadata_artwork.rs  notifications.rs  paths.rs  queue.rs  scrobbler.rs  spotify.rs  state.rs  thumbnails.rs  watcher.rs
src-tauri/src/audio/: analytics.rs  crossfade.rs  decoder.rs  engine.rs  eq.rs  mod.rs  output.rs  resampler.rs  spectrum.rs  state.rs  wasapi_exclusive.rs
src-tauri/src/audio/dsd/: metadata.rs  mod.rs  parser.rs  pcm.rs
src-tauri/src/commands/: analysis.rs  app_info.rs  backup.rs  browse.rs  deezer.rs  dlna.rs  duplicates.rs  edit.rs  integration.rs  library.rs  lyrics.rs  maintenance.rs  mod.rs  mood_radio.rs  offline.rs  player.rs  playlist.rs  playlist_cover.rs  preferences.rs  profile.rs  profile_io.rs  radio.rs  scan.rs  share.rs  similar.rs  smart_playlists.rs  spotify.rs  stats.rs  track.rs  tray.rs  wrapped.rs
src-tauri/src/db/: app_db.rs  migration_heal.rs  mod.rs  profile_db.rs
src-tauri/src/dlna/: cds.rs  config.rs  description.rs  http.rs  mod.rs  scpd_connection_manager.xml  scpd_content_directory.xml  ssdp.rs
src-tauri/src/smart_playlists/: cover.rs  custom.rs  generator.rs  mod.rs  on_repeat.rs
(+394 files in other folders)
