[package]
name = "waveflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "waveflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Build-time changelog generation (build.rs): parses `git log` and
# emits a JSON array embedded in the binary via include_str!.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
# gtk-rs 0.18 is still required by Tauri's Linux GTK3 stack and cannot move to
# glib 0.20. Keep the compatible 0.18 crate but backport RUSTSEC-2024-0429.
# See vendor/glib-0.18.5/PATCHES.md — the unsound Send/Sync impls on
# VariantStrIter are removed. Public scanners that match the bare
# version string "0.18.5" against the RustSec database will report a
# false positive against this copy.
glib = { path = "vendor/glib-0.18.5" }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
# Single-instance lock: a second `waveflow` invocation surrenders to the
# first, which surfaces and focuses its main window. Prevents two audio
# engines fighting over the same SQLite file and cpal device.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
# `futures::stream::StreamExt::buffered` for the scanner's parallel
# extract_file pipeline (CPU-bound hash + tag read run on the blocking
# pool, capped at the host's parallelism count).
futures = { version = "0.3", default-features = false, features = ["std"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
] }

# Errors and logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Persistent rolling log file so AppImage / packaged users (no terminal
# attached) can still hand a log to the maintainer when reporting bugs.
tracing-appender = "0.2"
dirs = "6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Library scanning
walkdir = "2"
lofty = "0.24"
# Standalone ID3v2 parser used to read the metadata blob embedded in
# the DSF container's footer. Lofty doesn't accept a raw byte buffer
# (it wants a full file), so the simpler `id3` crate is the cleanest
# fit for the DSD scan path. Not used for anything else.
id3 = "1"
blake3 = "1"

# Audio playback: symphonia decodes, cpal outputs, rubato resamples,
# rtrb is the SPSC ring between decoder thread and audio callback,
# crossbeam-channel carries AudioCmd from tokio commands to the decoder.
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "vorbis",
    "ogg",
    "aac",
    "alac",
    "isomp4",
    "pcm",
] }
cpal = "0.17"
rubato = "2.0"
rtrb = "0.3"
crossbeam-channel = "0.5"
# FFT for the spectrum visualizer. realfft is a thin wrapper over
# rustfft optimized for real-valued inputs (half the buckets out, half
# the cost in). Used by the decoder thread to compute log-bands from
# the post-EQ output, throttled to ~30 Hz.
realfft = "3"

# HTTP client for Deezer public API metadata enrichment
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Regex for stripping HTML from Last.fm bio summaries
regex = "1"

# Filesystem watcher for auto-detecting new audio files in watched
# library folders without a manual rescan.
notify = "8"

# Thumbnail pipeline (Piste E): decode source covers via `image`, then
# resize with SIMD acceleration via `fast_image_resize`. Output is
# re-encoded to JPEG via `image` so the asset protocol scope can stay
# extension-locked.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif", "tiff"] }
fast_image_resize = "6"
anyhow = "1"

# Last.fm signed API methods (auth.getMobileSession, track.scrobble,
# track.updateNowPlaying) need an md5 of the param block + secret.
md-5 = "0.11"
hex = "0.4"
base64 = "0.22"
sha2 = "0.11"

# OS-level media controls: SMTC on Windows, MPRIS on Linux,
# MediaRemoteCommandCenter on macOS. Souvlaki abstracts the three
# behind a single API; the integration lives in `media_controls.rs`.
souvlaki = "0.8"

# Build proper file:// URIs for cover art paths handed to MPRIS / SMTC.
# `url` is already in our transitive tree via reqwest.
url = "2"

# Tiny synchronous HTTP server bound to 127.0.0.1:0 — used solely to
# serve cover-art bytes to Windows SMTC, which only accepts http(s)
# URIs in `RandomAccessStreamReference::CreateFromUri` (file:// is
# rejected). The server is gated to localhost.
tiny_http = "0.12"

# DLNA / UPnP MediaServer.
#
# - `axum` drives the HTTP server (description.xml, ContentDirectory
#   SOAP control endpoint, /stream/<id> with Range, /art/<hash>).
# - `quick-xml` parses incoming SOAP envelopes and writes DIDL-Lite
#   responses without dragging in a full XML stack.
# - `socket2` is needed for IP_MULTICAST_TTL / IP_ADD_MEMBERSHIP on the
#   239.255.255.250:1900 SSDP socket — `tokio::net::UdpSocket` doesn't
#   surface those flags directly.
# - `if-addrs` enumerates the host's LAN IPs so the SSDP LOCATION
#   header advertises the address the client can actually reach
#   (rather than 127.0.0.1).
# - `mac_address` derives a stable v4 UUID for the device so
#   controllers don't see a new MediaServer each launch.
# - `tower-http` adds the `Range` request handling for /stream — the
#   built-in axum body types don't ship Range support.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
tower-http = { version = "0.6", features = ["fs"] }
# Adapter that wraps a tokio AsyncRead as a Stream<Bytes>, used to
# pipe a fs::File limited to a Range window into axum::body::Body
# without buffering the whole window in memory.
tokio-util = { version = "0.7", features = ["io"] }
quick-xml = { version = "0.39", features = ["serialize"] }
socket2 = "0.6"
if-addrs = "0.15"
mac_address = "1"
uuid = { version = "1", features = ["v4", "v5"] }

# Profile export / import: bundle the per-profile `data.db` + the
# user's manual artwork into a single `.waveflow` (zip) file. We pick
# zip 4.x for its `deflate` feature with a pure-Rust backend (no
# native libz dep), keeping the cross-compile story clean.
zip = { version = "8", default-features = false, features = ["deflate", "time"] }

# Discord Rich Presence — speaks the local Discord client's IPC named
# pipe (no network). Mirrors the souvlaki integration in
# `media_controls.rs`: a dedicated thread owns the IPC client and
# reconnects when Discord is restarted. Opt-in via the
# `integrations.discord_rpc` profile setting.
discord-rich-presence = "1"

[dev-dependencies]
# Sandboxed scratch directories for unit tests that touch the filesystem
# (artwork extraction, folder cover fallback, etc.). Auto-cleaned on
# Drop so a panicked test doesn't leak fixtures across the temp dir.
tempfile = "3"

# Linux-only: direct ALSA enumeration so the output-device picker can
# show human-readable descriptions ("HDA Intel PCH, ALC897 Analog
# Stereo") instead of cpal's short identifiers ("hdmi:CARD=PCH,DEV=0").
# Also lets us silence ALSA's noisy stderr probe warnings around cpal
# enumeration.
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.10"
libc = "0.2"
