[workspace]
resolver = "2"
members = ["crates/core", "crates/app", "crates/plugin-sdk", "crates/syncedlyrics"]

# The actual package definitions live in `crates/core/Cargo.toml` and
# `crates/app/Cargo.toml`. The workspace root is virtual: it owns the
# lockfile, the patched dependency list, and (eventually) the shared
# `[workspace.dependencies]` table.
#
# See `docs/architecture/crates.md` for the split rationale (RFC-001 §5).

[patch.crates-io]
# gtk-rs 0.18 is still required by Tauri's Linux GTK3 stack and cannot move
# to glib 0.20. Keep the compatible 0.18 crate but backport
# RUSTSEC-2024-0429. See vendor/glib-0.18.5/PATCHES.md — the unsound
# Send/Sync impls on VariantStrIter are removed. Public scanners that match
# the bare version string "0.18.5" against the RustSec database will
# report a false positive against this copy.
#
# Patch entries MUST live at the workspace root — Cargo silently ignores
# `[patch.crates-io]` declared in a workspace member crate.
glib = { path = "vendor/glib-0.18.5" }
