[package]
name = "waveflow"
version = "1.6.0"
description = "Local music player for desktop — Spotify-inspired UI, real-time audio engine, your files stay on your machine."
authors = ["InstaZDLL <github.105mh@8shield.net>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/InstaZDLL/WaveFlow"
homepage = "https://waveflow.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "waveflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# The in-app auto-updater is on by default for the Tauri-bundled installers
# (NSIS, MSI, .deb, .rpm, .dmg, .AppImage). It is incompatible with package
# managers that own update flow themselves — notably Flatpak (read-only
# /app), the Microsoft Store, the Mac App Store and any future repo where
# the system updater owns the binary. Those builds opt out via
# `cargo build --no-default-features`.
default = ["updater"]
updater = ["dep:tauri-plugin-updater"]
# Multi-device sync + server account binding (Phase 1.f, RFC-003).
# OFF for 1.5.0 — the bootstrap path has unresolved gaps (pre-v2
# `payload_hash` not backfilled on upgrade, server-side track auto-
# provision missing for legacy rows). When OFF, `mod sync` resolves
# to a stub with no-op functions matching the real public API so the
# ~70 emit call sites compile unchanged; the WS subscriber, drain
# task, auto-backfill, HTTP client, digest computation and payload-
# hash builder are all excluded from the binary. Re-enable in 1.6.0
# once the heal migration + apply pipeline gaps close.
sync_v1 = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Build-time changelog generation (build.rs): parses `git log` and
# emits a JSON array embedded in the binary via include_str!.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
# Workspace-local: the business-logic crate. `sqlite` enables the
# `sqlx::FromRow` derives on every domain type so the desktop command
# handlers can still use them as `query_as` targets. `plugins` pulls
# in the wasmtime + Cranelift + WASI host that powers
# `commands/plugins.rs`; the server intentionally leaves this feature
# off to keep its binary lean.
waveflow-core = { path = "../core", features = ["sqlite", "plugins"] }
waveflow-spotify = { path = "../spotify" }
waveflow-syncedlyrics = { path = "../syncedlyrics" }

tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = { version = "2", optional = true }
# Single-instance lock: a second `waveflow` invocation surrenders to the
# first, which surfaces and focuses its main window. Prevents two audio
# engines fighting over the same SQLite file and cpal device.
tauri-plugin-single-instance = "2"
# Cross-platform autostart wiring. Backed by:
#  - Windows: HKCU\Software\Microsoft\Windows\CurrentVersion\Run
#  - macOS:   LaunchAgent plist under ~/Library/LaunchAgents
#  - Linux:   ~/.config/autostart/<bin>.desktop (XDG spec)
# Persisted state lives entirely in the OS so the toggle survives an
# uninstall/reinstall the same way Spotify's "Open on startup" does.
tauri-plugin-autostart = "2"
# Cross-platform native toast notifications. Bridged to Windows Action
# Center (toastify), macOS NSUserNotification, and libnotify on Linux.
# Off by default and gated on `app_setting['notifications.track_change']`.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
# `futures::stream::StreamExt::buffered` for the scanner's parallel
# extract_file pipeline (CPU-bound hash + tag read run on the blocking
# pool, capped at the host's parallelism count).
futures = { version = "0.3", default-features = false, features = ["std"] }

# Database
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
] }

# Errors and logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Persistent rolling log file so AppImage / packaged users (no terminal
# attached) can still hand a log to the maintainer when reporting bugs.
tracing-appender = "0.2"
dirs = "6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Library scanning
walkdir = "2"
lofty = "0.24"
# Standalone ID3v2 parser used to read the metadata blob embedded in
# the DSF container's footer. Lofty doesn't accept a raw byte buffer
# (it wants a full file), so the simpler `id3` crate is the cleanest
# fit for the DSD scan path. Not used for anything else.
id3 = "1"
blake3 = "1"

# Audio playback: symphonia decodes, cpal outputs, rubato resamples,
# rtrb is the SPSC ring between decoder thread and audio callback,
# crossbeam-channel carries AudioCmd from tokio commands to the decoder.
symphonia = { version = "0.6", default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "vorbis",
    "ogg",
    "aac",
    "alac",
    "isomp4",
    "pcm",
    # Symphonia 0.6 split metadata behind feature flags; `all-meta` keeps
    # ID3/APE/Vorbis tag detection during probe scoring (the scanner uses
    # lofty for the actual tag read, so this is purely for probe accuracy).
    "all-meta",
] }
cpal = "0.17"
rubato = "3.0"
rtrb = "0.3"
crossbeam-channel = "0.5"
# FFT for the spectrum visualizer. realfft is a thin wrapper over
# rustfft optimized for real-valued inputs (half the buckets out, half
# the cost in). Used by the decoder thread to compute log-bands from
# the post-EQ output, throttled to ~30 Hz.
realfft = "3"

# HTTP client for Deezer public API metadata enrichment.
# `blocking` is enabled so the audio decoder thread can open a live
# HTTP stream synchronously from inside its non-tokio worker (Web
# Radio: see `audio::http_source`). The async client stays the
# default everywhere else.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# WebSocket client for the multi-device sync subscriber (Phase
# 1.f.desktop.4b). Same rustls stack as reqwest so the TLS roots stay
# unified; `connect-with-request` lets us attach the Bearer JWT to the
# WS upgrade headers (the server's middleware extracts it before
# routing to the upgrade handler).
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "rustls-tls-native-roots",
] }

# rustls 0.23 requires a process-wide default `CryptoProvider` to be
# installed before the first TLS handshake. reqwest configures its own
# per-connector, but tokio-tungstenite's `connect_async` panics with
# "no process-level CryptoProvider available" unless one is installed
# at boot. We pull rustls directly to call `install_default()` once in
# `lib.rs::run` (see the call site there).
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Regex for stripping HTML from Last.fm bio summaries
regex = "1"

# Filesystem watcher for auto-detecting new audio files in watched
# library folders without a manual rescan.
notify = "8"

# Thumbnail pipeline (Piste E): decode source covers via `image`, then
# resize with SIMD acceleration via `fast_image_resize`. Output is
# re-encoded to JPEG via `image` so the asset protocol scope can stay
# extension-locked.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif", "tiff"] }
fast_image_resize = "6"
# Static SVG → raster pipeline for smart-playlist brand covers (On Repeat
# today, future families). default-features disabled because we don't
# rasterise text or embedded raster — the SVGs are pure shapes/gradients,
# which trims ~2 MB of font + image-codec deps from the bundle.
resvg = { version = "0.47", default-features = false }
usvg = { version = "0.47", default-features = false }
tiny-skia = "0.12"
anyhow = "1"

# Last.fm signed API methods (auth.getMobileSession, track.scrobble,
# track.updateNowPlaying) need an md5 of the param block + secret.
md-5 = "0.11"
hex = "0.4"
base64 = "0.22"
sha2 = "0.11"

# OS-level media controls: SMTC on Windows, MPRIS on Linux,
# MediaRemoteCommandCenter on macOS. Souvlaki abstracts the three
# behind a single API; the integration lives in `media_controls.rs`.
souvlaki = "0.8"

# Build proper file:// URIs for cover art paths handed to MPRIS / SMTC.
# `url` is already in our transitive tree via reqwest.
url = "2"

# Tiny synchronous HTTP server bound to 127.0.0.1:0 — used solely to
# serve cover-art bytes to Windows SMTC, which only accepts http(s)
# URIs in `RandomAccessStreamReference::CreateFromUri` (file:// is
# rejected). The server is gated to localhost.
tiny_http = "0.12"

# DLNA / UPnP MediaServer.
#
# - `axum` drives the HTTP server (description.xml, ContentDirectory
#   SOAP control endpoint, /stream/<id> with Range, /art/<hash>).
# - `quick-xml` parses incoming SOAP envelopes and writes DIDL-Lite
#   responses without dragging in a full XML stack.
# - `socket2` is needed for IP_MULTICAST_TTL / IP_ADD_MEMBERSHIP on the
#   239.255.255.250:1900 SSDP socket — `tokio::net::UdpSocket` doesn't
#   surface those flags directly.
# - `if-addrs` enumerates the host's LAN IPs so the SSDP LOCATION
#   header advertises the address the client can actually reach
#   (rather than 127.0.0.1).
# - `mac_address` derives a stable v4 UUID for the device so
#   controllers don't see a new MediaServer each launch.
# - `tower-http` adds the `Range` request handling for /stream — the
#   built-in axum body types don't ship Range support.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
tower-http = { version = "0.7", features = ["fs"] }
# Adapter that wraps a tokio AsyncRead as a Stream<Bytes>, used to
# pipe a fs::File limited to a Range window into axum::body::Body
# without buffering the whole window in memory.
tokio-util = { version = "0.7", features = ["io"] }
quick-xml = { version = "0.40", features = ["serialize"] }
socket2 = "0.6"
if-addrs = "0.15"
mac_address = "1"
uuid = { version = "1", features = ["v4", "v5"] }

# Profile export / import: bundle the per-profile `data.db` + the
# user's manual artwork into a single `.waveflow` (zip) file. We pick
# zip 8.x for its `deflate` feature with a pure-Rust backend (no
# native libz dep), keeping the cross-compile story clean. (The earlier
# "zip 4.x" mention here drifted from the actual major after the bump
# during Phase 1.a — kept the comment in sync with the dependency line.)
zip = { version = "8", default-features = false, features = ["deflate", "time"] }

# Discord Rich Presence — speaks the local Discord client's IPC named
# pipe (no network). Mirrors the souvlaki integration in
# `media_controls.rs`: a dedicated thread owns the IPC client and
# reconnects when Discord is restarted. Opt-in via the
# `integrations.discord_rpc` profile setting.
discord-rich-presence = "1"

[dev-dependencies]
# Sandboxed scratch directories for unit tests that touch the filesystem
# (artwork extraction, folder cover fallback, etc.). Auto-cleaned on
# Drop so a panicked test doesn't leak fixtures across the temp dir.
tempfile = "3"

# Linux-only: direct ALSA enumeration so the output-device picker can
# show human-readable descriptions ("HDA Intel PCH, ALC897 Analog
# Stereo") instead of cpal's short identifiers ("hdmi:CARD=PCH,DEV=0").
# Also lets us silence ALSA's noisy stderr probe warnings around cpal
# enumeration.
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.10"
libc = "0.2"

# Windows-only: opt-in bit-perfect playback via WASAPI Exclusive Mode.
# `wasapi` is a thin safe wrapper over the Win32 audio COM API — it
# pulls a slice of `windows-rs` features (Win32_Media_Audio,
# Win32_System_Com, Win32_System_Threading, etc.) but **not** the full
# Windows crate. Adds ~5-10 MB to the NSIS / MSI Windows binary; the
# Linux + macOS bundles are untouched (the dep is target-gated).
#
# `windows` is included explicitly so we can call `CoInitializeEx` /
# event-handle APIs from the exclusive-mode output thread without
# going through `wasapi`'s less ergonomic wrappers.
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }
