[package]
name = "waveflow-core"
version = "1.4.0"
description = "Business logic shared between the WaveFlow desktop app and the future waveflow-server: scanning, metadata enrichment, DSD conversion, smart-playlist algorithms, repository traits."
authors = ["InstaZDLL <github.105mh@8shield.net>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/InstaZDLL/WaveFlow"
homepage = "https://waveflow.app"

[features]
default = []
# Opt in to the SQLite backend: enables `sqlx::FromRow` derives on the
# domain types (via `cfg_attr`) and pulls the `sqlite` + `runtime-tokio`
# sqlx features so the `repository::sqlite` implementations compile.
# The trait definitions in `repository::*` stay backend-agnostic; the
# `postgres` feature below ships the parallel implementation for
# `waveflow-server` (RFC-001 §6.5). The two features are mutually
# compatible — Cargo's feature unification means a workspace that
# happens to depend on both backends still gets a single build.
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Diagnostics surface for the core modules — every `tracing::warn!`
# in the migrated artwork / metadata code already has an app-side
# subscriber set up via `tracing-subscriber`; core just emits.
tracing = "0.1"
# `async-trait` lets the repository traits in `crate::repository`
# expose `async fn` while staying dyn-compatible. Native `async fn in
# trait` is stable since 1.75 but drops the `dyn` capability; the
# desktop side leans on `&dyn ProfileRepository` parameters in some
# of the higher-level command handlers, so we still need the macro.
async-trait = "0.1"
# `macros` is the only feature needed for the `FromRow` derive itself;
# the per-database row glue (`sqlx::sqlite::SqliteRow`) lives in the
# downstream crate that picks a runtime. Cargo's feature unification
# means the workspace's effective sqlx build still has `sqlite`,
# `runtime-tokio`, `migrate`, … when `crates/app` opts into them.
sqlx = { version = "0.9", default-features = false, features = ["macros"] }

# Metadata enrichment HTTP clients (Deezer, Last.fm, LRCLIB). Pure
# `reqwest` over rustls — no Tauri, no DB, designed to be reusable
# from the future `waveflow-server` axum handlers. The `blocking`
# feature is gated for the plugin host: `waveflow:host/http.send` is
# a SYNC WIT function called from the wasm guest, and bridging an
# async reqwest call through `tokio::Handle::current().block_on`
# inside a wasmtime callback would deadlock on the same worker
# thread the guest is running on. `reqwest::blocking::Client` shares
# the rustls stack so we don't double the TLS code size.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
# HTTP allowlist matching for the plugin SDK. Compiles a manifest
# pattern like `https://*.radio-browser.info/*` into a finite
# automaton that matches at request time without per-request regex
# compilation. Tiny dep, single-purpose.
globset = "0.4"
# Last.fm signed write methods (`auth.getMobileSession`, `track.scrobble`,
# `track.updateNowPlaying`) require an md5 of the param block + secret;
# `hex` encodes the digest into the canonical 32-char lowercase string
# the API expects.
md-5 = "0.11"
hex = "0.4"
# Stripping HTML tags out of Last.fm bio summaries before the desktop
# renders them.
regex = "1"
# Used by the Last.fm + LRCLIB clients to parse the more dynamic
# response shapes that don't deserialize cleanly into a fixed struct.
serde_json = "1"

# Artwork pipeline (`artwork::thumbnails` + `artwork::metadata`):
# `image` decodes the source covers, `fast_image_resize` SIMD-resizes
# the 1x / 2x JPEG variants, `blake3` keys the shared metadata cache,
# `anyhow` carries the thumbnail-job error chain (it's only ever
# logged, never bubbled to a Result variant — a `thiserror`-typed
# error would be busywork here).
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif", "tiff"] }
fast_image_resize = "6"
blake3 = "1"
anyhow = "1"

# Per-track audio analysis (ReplayGain, BPM): decode the file with
# symphonia, compute peak / loudness / BPM. Same codec feature set
# the desktop runtime needs — Cargo unifies them.
symphonia = { version = "0.6", default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "vorbis",
    "ogg",
    "aac",
    "alac",
    "isomp4",
    "pcm",
    "all-meta",
] }

# Smart-playlist cover rasterisation: `resvg` + `usvg` parse and
# rasterise the On Repeat brand cover SVG; `tiny-skia` is the pixel
# canvas they paint into. Same default-features-disabled tightening
# the desktop already applies — the SVG is pure shapes + gradients,
# no embedded raster or text.
resvg = { version = "0.47", default-features = false }
usvg = { version = "0.47", default-features = false }
tiny-skia = "0.12"

# Time stamps for the smart-playlist generators (`play_event.played_at`
# arithmetic, deterministic seeds) and the audio analysis pipeline.
chrono = { version = "0.4", features = ["serde"] }

# Tag parser used by the scanner extract helpers (`crate::scanner::extract`).
# Same minor as the desktop crate so the workspace's effective lofty
# build stays cached.
lofty = "0.24"
# DSF container footer carries an embedded ID3v2 blob; lofty doesn't
# accept a raw byte buffer (it wants a full file), so `audio_format::dsd::metadata`
# parses it via the lower-level `id3` crate.
id3 = "1"

# Plugin manifest parsing (`crate::plugin::manifest`). TOML over
# JSON because authors write these by hand — TOML reads cleaner.
toml = "1.1"
# Plugin sidecar asset hashing (`crate::plugin::assets`). Standard
# SHA-256 hex digest so a third-party tool can verify the file
# without depending on us. Re-uses the same `sha2` codegen the
# rest of the workspace already pulls in transitively.
sha2 = "0.10"
# Shared plugin contract (manifest schema version + WIT world / permission
# catalog). The SDK crate doesn't depend on us — it's a flat constants
# crate both sides import.
waveflow-plugin-sdk = { path = "../plugin-sdk" }

# WebAssembly Component Model runtime — Phase 2a wires the engine,
# component loader, and sandbox config (fuel, memory cap, epoch
# interrupt). The `bindgen!` macro generates the host-side trait shells
# from the WIT files under `../plugin-sdk/wit/`; Phase 2b implements
# them in `plugin::host_impl`. Defaults trimmed: we don't need the
# pooling allocator, async API, coredump, or addr2line debug-info paths
# in v1 — sync API + cranelift JIT keeps the bundle bump near 5 MB.
wasmtime = { version = "45", default-features = false, features = [
    "runtime",
    "cranelift",
    "component-model",
    "parallel-compilation",
] }
# WASI Preview 2 imports the host must satisfy for any Component
# Model guest compiled by `cargo component` — wit-bindgen-rt
# pulls in `wasi:cli/environment` (panic handler), `wasi:io/streams`
# (stdio), `wasi:clocks/wall-clock` (random + monotonic), etc.,
# even when the plugin author never explicitly opts into WASI.
#
# We wire a MINIMAL context per Store (`WasiCtxBuilder::new().build()`
# in `crate::plugin::runtime::PluginRuntime::new_store_for_plugin`):
# no filesystem preopens, no env-var inheritance, no command-line
# args. Networking isn't globally removed — wasmtime-wasi keeps
# the `wasi:sockets/*` APIs callable — but every destination
# starts denied because no `allow_*` rule is registered. Together
# with our own `waveflow:host/http` allowlist gating the only HTTP
# path we actually expose to plugins, the result is "no host
# resources reachable unless the manifest explicitly asked for
# them".
wasmtime-wasi = { version = "45", default-features = false }

[dev-dependencies]
# Sandboxed scratch directories for the smart-playlist cover render
# tests. Same usage shape as the app crate's existing dev-dep.
tempfile = "3"
